Added Automated ontology matching conding challenge

--- a/Notebooks/02-01-Integrate-heterogeneous-building-product-data.ipynb
+++ b/Notebooks/02-01-Integrate-heterogeneous-building-product-data.ipynb
@@ -4,29 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Publish Smart Home Sensor Data using SWT\n",
+    "# Integrate heterogeneous building product data\n",
+    "Lecturer: **Georg Ferdinand Schneider**, [RG](https://www.researchgate.net/profile/Georg_Schneider3)  \n",
     "\n",
     "### Problem Description\n",
     "\n",
-    "Smart home systems are increasingly used in residential flats and buildings. Mostly these systems increase the comfort of a home either by improving indoor air quality, thermal comfort or integrate multimedia applications in the system. A tremendous amount of data is produced by these systems and it is difficult to integrate data from different systems, as typically vendors and communication protocols differ.\n",
-    "\n",
-    "Linked Building Data (LBD) may provide a remedy to the interoperability problems stemming from this multi-vendor, multi-protocol and multi-domain setting. In this coding challenge you will research what possibilities exist to integrate sensor data obtained from smart home systems with other data using Semantic Web Technologies.\n",
+    "A Text.\n",
     "\n",
     "### Research Questions\n",
     "\n",
-    "* RQ1: What possibilities exist to publish observations of sensors using SWT?\n",
-    "* RQ2: How can the sensor data be linked to additional data sources available on the web (e.g. weather services)?\n",
-    "* RQ3: What best practices and recommendations exist for the storage of large amounts time series data in SWT?\n",
+    "* RQ1: A question?\n",
+    "* RQ2: ?\n",
+    "* RQ3: ?\n",
     "\n",
     "### Dataset\n",
     "\n",
-    "The Open Smart Home data set [1] is a data set obtained from a real smart home. It is composed of static data describing a real residential flat situated in Nürnberg, Germany and dynamic data, i.e. time series, obtained from real sensors and actuators placed in the residential flat.\n",
-    "\n",
-    "A number of ontologies exist in the smart home domain, which may serve as a starting point [3,4]. Also a strong set of recommended standards to publish sensor and acutator data on the web exists [5].\n",
+    ".\n",
     "\n",
     "### Tools\n",
     "\n",
-    "Check the influx DB [https://www.influxdata.com/](https://www.influxdata.com/), which is a database specifically design to store time series data or the RDF to relational data bases (R2RDB) mapping [6] as implemented in the Ontop tool [https://github.com/ontop/ontop](https://github.com/ontop/ontop).\n",
+    " [https://www.influxdata.com/](https://www.influxdata.com/)\n",
     "\n",
     "### References\n",
     "\n",
