--- a/Notebooks/Index.ipynb
+++ b/Notebooks/Index.ipynb
@@ -25,8 +25,9 @@
     "\n",
     "## Chapter 2 - Topics for the **Coding Challenge**\n",
     "\n",
-    "* [02-00 Publish Smart Home Sensor Data using SWT](02-01-Publish-Smart-Home-Sensor-Data-using-SWT.ipynb)  \n",
-    "* [02-01 Integrate heterogeneous building product data](02-00-Integrate-heterogeneous-building-product-data.ipynb)  \n",
+    "* [02-00 Publish Smart Home Sensor Data using SWT](02-00-Publish-Smart-Home-Sensor-Data-using-SWT.ipynb)  \n",
+    "* [02-01 Integrate heterogeneous building product data](02-01-Integrate-heterogeneous-building-product-data.ipynb)  \n",
+    "* [02-02 Automated Ontology Matching in the Built Environment](02-02-Automated-Ontology-Matching-in-the-Built-Environment.ipynb)  \n",
     "\n"
    ]
   },
