--- a/Notebooks/00-01-Check-Internet-Connection.ipynb
+++ b/Notebooks/00-01-Check-Internet-Connection.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 1: Specify the endpoint of the OSH"
+    "Specify the endpoint of the OSH"
    ]
   },
   {
@@ -104,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 4: Check whether your query has been succesful:"
+    "Step 4: Check whether your query has been successful:"
    ]
   },
   {
