Added links to domain ontologies

--- a/Notebooks/02-02-Automated-Ontology-Matching-in-the-Built-Environment.ipynb
+++ b/Notebooks/02-02-Automated-Ontology-Matching-in-the-Built-Environment.ipynb
@@ -39,6 +39,18 @@
     "* [SAREF4BLDG2BOT](https://github.com/w3c-lbd-cg/bot/blob/AlignmentRevision/SAREF4BLDGAlignment.ttl)  \n",
     "* [THINKHOME2BOT](https://github.com/w3c-lbd-cg/bot/blob/AlignmentRevision/THINKHOMEAlignment.ttl)  \n",
     "\n",
+    "The six domain ontologies can be accessed via their identifiers as well as from their online sources:\n",
+    "\n",
+    "Directly from the IRI:  \n",
+    "* [DERI Rooms](http://vocab.deri.ie/rooms#)  \n",
+    "* [IFC4 Add 2](http://www.buildingsmart-tech.org/ifcOWL/IFC4_ADD2#)  \n",
+    "* [TH](https://www.auto.tuwien.ac.at/downloads/thinkhome/ontology/BuildingOntology.owl#)  \n",
+    "* [DogOnt](http://elite.polito.it/ontologies/dogont.owl#)  \n",
+    "\n",
+    "From an online source:  \n",
+    "* [S4BLDG](https://mariapoveda.github.io/saref-ext/OnToology/SAREF4BLD/ontology/saref4bldg.ttl/documentation/ontology.ttl)  \n",
+    "* [BRICK](https://brickschema.org/ttl/Brick.ttl), [BRICK Frame](https://brickschema.org/ttl/BrickFrame.ttl)  \n",
+    "\n",
     "### Tools\n",
     "\n",
     "* [AlignmentMakerLight-Tool [6]](https://github.com/AgreementMakerLight/AML-Project/releases)\n",
