Revision of Building Product Data Challenge

--- a/Notebooks/02-01-Integrate-heterogeneous-building-product-data.ipynb
+++ b/Notebooks/02-01-Integrate-heterogeneous-building-product-data.ipynb
@@ -4,25 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Integrate heterogeneous building product data\n",
-    "Lecturer: **Anna Wagner**, [RG](https://www.researchgate.net/profile/Anna_Wagner13)  \n",
+    "# Semantic Integration of Heterogeneous Building Product Data\n",
+    "Lecturer: **Anna Wagner**, [RG](https://www.researchgate.net/profile/Anna_Wagner13)   \n",
+    "Co-Lecturer: **Georg Ferdinand Schneider**, [RG](https://www.researchgate.net/profile/Georg_Schneider3)  \n",
     "\n",
     "### Problem Description\n",
     "\n",
     "The exchange of product data related to products in the buildings domain is a cumbersome task as it involves multiple companies, domains and dataformats. Linked Data and Semantic Web Technologies (LD & SWT) have been identified to be beneficial, when addressing this heterogeneity in building product data [1,2].\n",
     "\n",
-    "Distributing semantically annotated product data on the web using LD & SWT is nowadays an industry standard in particular through the [schema.org](https://schema.org/) and [GoodRelations](http://www.heppnetz.de/projects/goodrelations/) ontologies [3].\n",
+    "Distributing semantically annotated product data on the web using LD & SWT is nowadays an industry standard [3]. In particular, the [schema.org](https://schema.org/) and [GoodRelations](http://www.heppnetz.de/projects/goodrelations/) schemas are to be mentioned as they are supported by main search engines, such as Google, Bing, Baidu, etc..\n",
     "\n",
     "The potential of LD & SWT in building product data have not yet been fully exploited. Examples for its application exists [2,4,[BauDataWeb](http://semantic.eurobau.com/)], however some problems remain:\n",
     "\n",
-    "* A plethory of formats exits and have not been mapped linked to, e.g., GoodRelations;  \n",
-    "* It is unclear how building product data formats can be linked to other well established domain models such as the Industry Foundations Classes (IFC).\n",
+    "* A plethora of schemas exits but have not been mapped to a top level product data ontology, e.g., GoodRelations;  \n",
+    "* Mappings of building product data schemas to other well established domain models such as the Industry Foundations Classes (IFC) do not exist.\n",
     "\n",
     "Within this coding challenge you will work on the following tasks:\n",
     "\n",
-    "* Bootstrap a novel schema (Tbox) for a real product data standard the German VDI3805 [5-8] (Copies of the standards will be made available by the lecturer)  ;  \n",
+    "* Bootstrap a novel schema (Tbox) for a real product data standard, the German VDI3805 [5-8];  \n",
     "* Acquire real product data from the CSV file based real product data catalogue and populate your schema level ontology;  \n",
-    "* Link your schema to other (building) product data ontologies such as BauDataWeb, GoodRelations, BPO, bsDD-LD ... to experience cross-domain integration  \n",
+    "* Link your schema to other (building) product data ontologies such as [BauDataWeb](http://semantic.eurobau.com/), [GoodRelations](http://www.heppnetz.de/ontologies/goodrelations/v1.html), [BPO](https://w3id.org/bpo), [bsDD-LD](https://github.com/PeterWillems/BIMbots-PSD-Repository) ... to experience cross-domain integration  \n",
     "\n",
     "### Research Questions\n",
     "\n",
@@ -32,19 +33,27 @@
     "\n",
     "### Dataset\n",
     "\n",
-    "A large number of catalogues of manufacturer catalogues compliant to VDI 3805 exists and can be downloaded here [URL](http://vdi3805-bim.de) or [URL](http://www.vdi3805.org/index.php).  \n",
+    "A large number of manufacturer catalogues compliant to VDI 3805 exist and are distributed via web portals [vdi3805-bim.de](http://vdi3805-bim.de) or [vdi3805.org](http://www.vdi3805.org/index.php).  \n",
+    "\n",
+    "A set of ontologies used for building product data exists:\n",
+    "\n",
+    "* [GoodRelations](http://www.heppnetz.de/ontologies/goodrelations/v1.html)  \n",
+    "* [FreeClassOWL](http://www.freeclass.eu/freeclass_v1.html)  \n",
+    "* [BauDataWeb](http://semantic.eurobau.com/)  \n",
+    "* [Building Product Ontology (BPO)](https://w3id.org/bpo)  \n",
     "\n",
     "### Tools\n",
     "\n",
     "* [Karma Data Integration tool](http://usc-isi-i2.github.io/karma/)  \n",
-    "* [RDFlib a pyhton module for rdf parsing and serialisation](https://rdflib.readthedocs.io/)  \n",
+    "* [RDFlib - a pyhton module for rdf parsing and serialisation](https://rdflib.readthedocs.io/)  \n",
     "* [Slurping CSV in Python](https://www.digitalocean.com/community/tutorials/how-to-handle-plain-text-files-in-python-3)  \n",
+    "* [Apache Jena - RDF for Java](https://jena.apache.org/)  \n",
     "\n",
     "### References\n",
     "\n",
-    "[1] Wagner, A., Möller, L.K., Leifgen, C., Rüppel, U. (2018) *SolConPro: Describing multifunctional building products using semantic web technologies.* In: Karlshoj, J., Scherer, R.J. (eds.) EWork and eBusiness in architecture, engineering and construction: proceedings of the 12th European Conference on Product and Process Modelling (ECPPM 2018). pp. 447-455. 12, CRC Press.\n",
+    "[1] Wagner, A., Möller, L.K., Leifgen, C. & Rüppel, U. (2018) *SolConPro: Describing multifunctional building products using semantic web technologies.* In: Karlshoj, J., Scherer, R.J. (eds.) EWork and eBusiness in architecture, engineering and construction: proceedings of the 12th European Conference on Product and Process Modelling (ECPPM 2018). pp. 447-455. 12, CRC Press.\n",
     "\n",
-    "[2] Anna Wagner, Wendelin Sprenger, Christoph Maure, and Uwe Rüppel (2019). *BPO: The Building Product Ontology for Assembled Products*. In Proc. of LDAC, Lisbon, Portugal, CEUR-WS.org.\n",
+    "[2] Wagner, A. & Rüppel, U. (2019). *BPO: The Building Product Ontology for Assembled Products*. In Proc. of LDAC, Lisbon, Portugal, CEUR-WS.org.\n",
     "\n",
     "[3] Hepp, M.: GoodRelations: An Ontology for Describing Products and Services\n",
     "Offers on the Web. In: Gangemi, A., Euzenat, J. (eds.) Lecture\n",
@@ -63,13 +72,6 @@
     "\n",
     "[8] VDI 3805-33 (2017) *Product data exchange in the building services – Controls and accessories*, Verein Deutscher Ingenieure e.V., Düsseldorf, Germany."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
