--- a/Notebooks/02-01-Integrate-heterogeneous-building-product-data.ipynb
+++ b/Notebooks/02-01-Integrate-heterogeneous-building-product-data.ipynb
@@ -45,7 +45,7 @@
     "### Tools\n",
     "\n",
     "* [Karma Data Integration tool](http://usc-isi-i2.github.io/karma/)  \n",
-    "* [RDFlib - a pyhton module for rdf parsing and serialisation](https://rdflib.readthedocs.io/)  \n",
+    "* [RDFlib - a python module for rdf parsing and serialisation](https://rdflib.readthedocs.io/)  \n",
     "* [Slurping CSV in Python](https://www.digitalocean.com/community/tutorials/how-to-handle-plain-text-files-in-python-3)  \n",
     "* [Apache Jena - RDF for Java](https://jena.apache.org/)  \n",
     "\n",
