--- a/Notebooks/02-03-Geometry-Coding-Challenge.ipynb
+++ b/Notebooks/02-03-Geometry-Coding-Challenge.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Extraction and Semantic Annotation of Geometry Data from IFC\n",
     "\n",
-    "Lecturer: **Matthias Bonduel**, [RG](https://www.researchgate.net/profile/Mathias_Bonduel)  \n",
+    "Lecturer: **Mathias Bonduel**, [RG](https://www.researchgate.net/profile/Mathias_Bonduel)  \n",
     "Lecturer: **Kris McGlinn**, [RG](https://www.researchgate.net/profile/Dr_Kris_Mcglinn)  \n",
     "Lecturer: **Anna Wagner**, [RG](https://www.researchgate.net/profile/Anna_Wagner13)   \n",
     "\n",
