Initial additoin of template on LBD Tools tutorial

--- a/Notebooks/Index.ipynb
+++ b/Notebooks/Index.ipynb
@@ -27,7 +27,11 @@
     "* [02-00 Publish Smart Home Sensor Data using SWT](02-00-Publish-Smart-Home-Sensor-Data-using-SWT.ipynb)  \n",
     "* [02-01 Integrate heterogeneous building product data](02-01-Integrate-heterogeneous-building-product-data.ipynb)  \n",
     "* [02-02 Automated Ontology Matching in the Built Environment](02-02-Automated-Ontology-Matching-in-the-Built-Environment.ipynb)  \n",
-    "* [02-03 Extraction and Semantic Annotation of Geometry Data from IFC](02-03-Geometry-Coding-Challenge.ipynb)  \n"
+    "* [02-03 Extraction and Semantic Annotation of Geometry Data from IFC](02-03-Geometry-Coding-Challenge.ipynb)  \n",
+    "\n",
+    "## Chapter 3 - Lecture Notes and Tutorials\n",
+    "\n",
+    "* [03-02 Linked Building Data: Examples & Tools](03-02-Linked-Building-Data-Tools.ipynb)  \n"
    ]
   },
   {
