--- a/Notebooks/03-00-geo-bim-tutorial.ipynb
+++ b/Notebooks/03-00-geo-bim-tutorial.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "The objectives of the tutorial are as follows:\n",
     "\n",
-    "*  Show how to use the Jena code base for adding GeoSPARQL to a sample ifcOWL and BOT model;  \n",
+    "* Show how to download and execute the Jena code base for adding GeoSPARQL to a sample ifcOWL and BOT model;  \n",
     "* Demonstrate some simple geospatial queries over the resulting data."
    ]
   },
@@ -37,9 +37,21 @@
     "| AC20-FZK Haus.ttl | 239899 | 13 | 2 |\n",
     "| Barcelona_Pavilion.ttl | 1033905 | 35 | 2 |\n",
     "\n",
-    "Save your file as “test_file.ttl” or someother name. In the rest of this tutorial we will use the name “test_file.ttl” to indicate the ifcowl file."
+    "Save your file as “test_file.ttl” or someother name. In this tutorial we will use the name “test_file.ttl” to indicate the ifcowl file."
    ]
   },
+    {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## STEP 1: DOWNLOAD AND INSTALL THE CONVERTOR",
+	"You can access the code from github at the following address: ",
+	"Clone the project onto your computer and open it in your favorite IDE. 
+	I use netbeans (https://netbeans.org/).",
+	"Alternatively, you can download the jar file and its dependencies from 
+	the following location: www.xyz.com"
+   ] 
+   },
   {
    "cell_type": "code",
    "execution_count": null,
