Added small adaption according to reinders comments

--- a/Notebooks/02-05-Open-Datamodel-Coding-Challenge.ipynb
+++ b/Notebooks/02-05-Open-Datamodel-Coding-Challenge.ipynb
@@ -13,16 +13,15 @@
     "\n",
     "### Problem Description\n",
     "\n",
-    "This coding challenge has been submitted to the Summer School of LDAC committee by Reinder Peterse and builds on his BIMhub.com idea.\n",
+    "This coding challenge has been submitted to the Summer School of LDAC committee by Reinder Peterse and builds on his BIMhub.org idea.\n",
     "\n",
     "At this moment the Architecture Engineering and Construction (AEC) industry uses a lot of different models, software, ontologies etc. Standardization is still a long way and we notice that large software vendors are not keen to support open datamodels but rather develop and promote closed platform solutions.  \n",
     "\n",
-    "This is a problem for constractors and consultants. A common work around is that these parties use an own model by creating new datamodels with custom attributes etc.\n",
+    "This is a problem for contractors and consultants. A common work around is that these parties use an own model by creating new datamodels with custom attributes etc.\n",
     "\n",
-    "From practical experience by using different ontologies, programming libraries alike it becomes clear that common concepts and attributes as well as modelling patterns reoccur [1]. For instance, in one model we call an 'object' an 'object', someone else would use the term 'asset'. Discussions on aligning are more about 'how should we call a chair' or\n",
-    "'is a chair a child of a room or a child of a lounge set' etc.\n",
+    "From practical experience by using different ontologies, programming libraries, etc., it becomes clear that on a **data level** common concepts and attributes as well as modelling patterns reoccur [1]. For instance, in one model we call an 'object' an 'object', someone else would use the term 'asset'. Discussions on aligning are more about 'how should we call a chair' or 'is a chair a child of a room or a child of a lounge set' etc.\n",
     "\n",
-    "From practical expertice it has been noticed that there is a strong need for a deeper level of standardizations: standardizations on the datamodel\n",
+    "From practical expertise it has been noticed that there is a strong need for a deeper level of standardizations: standardizations on the datamodel\n",
     "level:\n",
     "\n",
     "* An Database Object 'Asset' has attributes, e.g.:\n",
@@ -44,10 +43,11 @@
     "\n",
     "### Research Questions\n",
     "\n",
-    "* RQ1: Which basic structural and topological design patterns do reoccur in BIM-related datamodel and database structures?\n",
-    "* RQ2: What competency questions can be formulated in terms of reoccuring structural and topological design patterns in BIM-related datamodels and database structure?\n",
-    "* RQ3: What are the minimal requirements for an Common Data Model in BIM-related information exchange?\n",
-    "* RQ4: How can Semantic Web Technologies address the described problems and challenges?\n",
+    "* RQ1: What is the difference between IFC, AEC domain ontologies, Object Type Libraries and a proposed Common Data Model to save and share the actual Asset data. What is the difference between them and where do they overlay?\n",
+    "* RQ2: Which basic structural and topological design patterns do reoccur in BIM-related datamodel and database structures?\n",
+    "* RQ3: What competency questions can be formulated in terms of reoccuring structural and topological design patterns in BIM-related datamodels and database structure?\n",
+    "* RQ4: What are the minimal requirements for a Common Data Model in BIM-related information exchange?\n",
+    "* RQ5: How can Semantic Web Technologies address the described problems and challenges?\n",
     "\n",
     "\n",
     "### Dataset\n",
