--- a/Notebooks/02-04-Generation-VR-Coding-Challenge.ipynb
+++ b/Notebooks/02-04-Generation-VR-Coding-Challenge.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "* Already available gLTF models in KhronosGroup database of [gLTF 2.0 samples](https://github.com/KhronosGroup/glTF-Sample-Models/tree/master/2.0)\n",
     "\n",
-    "* A [working example of VR scene](./data/babylonJS/BabylonJS_VR_gLTF.html) based on [Babylon.js](https://www.babylonjs.com/) that can be loaded by a generic browser (e.g. Firefox, Internet Explore) as an .html file. The content of .html file is based on JavaScript and can be reconfigured to load any scene consisting of gLTF models as described [here](./data/babylonJS/BabylonJS_VR_gLTF.md).\n",
+    "* A [working example of VR scene](../data/babylonJS/BabylonJS_VR_gLTF.html) based on [Babylon.js](https://www.babylonjs.com/) that can be loaded by a generic browser (e.g. Firefox, Internet Explore) as an .html file. The content of .html file is based on JavaScript and can be reconfigured to load any scene consisting of gLTF models as described [here](../data/babylonJS/BabylonJS_VR_gLTF.md).\n",
     "\n",
     "### Tools\n",
     "\n",
