--- a/Notebooks/02-04-Generation-VR-Coding-Challenge.ipynb
+++ b/Notebooks/02-04-Generation-VR-Coding-Challenge.ipynb
@@ -9,25 +9,24 @@
     "Lecturer: **Walter Terkaj**, \n",
     "[RG](https://www.researchgate.net/profile/Walter_Terkaj)\n",
     "\n",
-    "This coding challenge is proposed by the Erasmus+ project Virtual Factory \n",
-    "Learning Toolkit [VLFT](https://www.vlft.eu/)\n",
+    "This coding challenge is proposed by the Erasmus+ project [Virtual Learning Factory Toolkit](https://www.vlft.eu/) (VLFT)\n",
     "\n",
     "### Problem Description\n",
     "\n",
-    "Virtual Reality (VR) is more and more spreading as a technology for immersive visualization of 3D scenes, including civil and industrial buildings. Such technology can be exploited to support the design, planning, management and control of the building environment while providing a realistic feeling. VR environments can be used to identify possible problems before they happen in the real world, for training and learning purposes, to enhance collaboration, and to improve safety. \n",
+    "Virtual Reality (VR) is more and more spreading as a technology for (immersive) visualization of 3D scenes, including civil and industrial buildings. Such technology can be exploited to support the design, planning, management and control of the building environment while providing a realistic feeling. VR environments can be used to identify possible problems before they happen in the real world, for training and learning purposes, to enhance collaboration, and to improve safety. \n",
     "\n",
-    "VR is mainly an advanced visual interface and it is not particularly useful as standalone application. Therefore, there is a clear need to integrate with other tools and methodologies; this can be achieved thanks to a linked data approach [1]. [Req.1]\n",
+    "VR is mainly an advanced visual interface and it is not particularly useful as standalone application. Therefore, there is a clear need of integration with other tools and methodologies; this can be achieved thanks to a linked data approach [1]. [Req.1]\n",
     "\n",
     "In addition, it must be noted that the generation of VR scenes may require specific expertise and a long lead time, while returing as result a solution that can be highly customized but difficult to be updated (cf. solutions developed in [Unity](https://unity.com/) or [Unreal Engine](https://www.unrealengine.com)). Therefore, there is a need of simplified and automated workflows for the dynamic and reconfigurable generation of VR scenes [Req.2] without asking for complex hardware and software setup [Req.3].\n",
     "\n",
-    "Therefore, the expected outcome is a routine developed in any programming language for the rapid creation of a 3D virtual environment that is free and portable. The routine will be easily reconfigured to take into account the location and spatial relationships of the building assets.\n",
+    "The expected outcome is a routine developed in any programming language for the rapid creation of a 3D virtual environment that is free and portable. The routine will be easily reconfigured to take into account the location and spatial relationships of the building assets.\n",
     "\n",
     "Within the coding challenge you will work on the following tasks:\n",
     "\n",
     "1. Set-up the building ontology model as LBD ABox triples. This can be created from scratch or existing models can be reused. Possible reference Tbox are [ifcOWL](http://www.buildingsmart-tech.org/ifcOWL/IFC4_ADD2), Linked Building Data (LBD) ontologies ([BOT](https://w3id.org/bot#), [PRODUCT](https://github.com/w3c-lbd-cg/product), \n",
     "[PROPS](https://github.com/w3c-lbd-cg/props), [OPM](https://github.com/w3c-lbd-cg/opm)), etc. [2].\n",
     "\n",
-    "2. Prepare 3D models for VR environment. It is suggested to use [glTF](https://github.com/KhronosGroup/glTF/)(GL Transmission Format) that is a royalty-free specification for the efficient transmission and loading of 3D scenes and models by applications.\n",
+    "2. Prepare 3D models for VR environment. It is suggested to use [glTF](https://github.com/KhronosGroup/glTF/) (GL Transmission Format) that is a royalty-free specification for the efficient transmission and loading of 3D scenes and models by applications.\n",
     "\n",
     "3. Link building information with 3D VR models. Please refer to the coding challenge [Extraction and Semantic Annotation of Geometry Data from IFC](02-03-Geometry-Coding-Challenge.ipynb) for more details about possible solutions.\n",
     "\n",
