--- a/Notebooks/03-00-geo-bim-tutorial.ipynb
+++ b/Notebooks/03-00-geo-bim-tutorial.ipynb
@@ -6,10 +6,6 @@
    "source": [
     "# SETUP FOR SUPPORTING QUERIES OF IFCOWL GEOMETRIES CONVERTED INTO GEOSPARQL\n",
     "\n",
-    "Lecturer: **Kris McGlinn**,[www.krismcglinn.com](https://www.krismcglinn.com), [Research Gate](https://www.researchgate.net/profile/Dr_Kris_Mcglinn)  \n",
-    "\n",
-    "Edited by Kris McGlinn, Joseph Donovan, [ADAPT Centre](https://www.adaptcentre.ie), [Trinity College Dublin](https://www.tcd.ie), Ireland\n",
-    "\n",
     "## Introduction\n",
     "\n",
     "This document aims to provide the reader with a step-by-step tutorial for converting ifcOWL IfcStandardWallCase geometries into GeoSPARQL and export them as ifcOWL with added GeoSPARQL and also BOT with GeoSPARQL. You will also learn how to write and execute some simple GeoSPARQL queries.\n",
@@ -200,7 +196,19 @@
     "```"
    ]
   },
-
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## STEP 5 WORKING WITH GEOSPATIAL DATA\n",
+    "\n",
+    "\n",
+    "Now let’s examine the use of some geospatial data. Go to <url will be provided on the day> and download the RDF file. This file is a subset of the Ordnance Survey Irelands geospatial data. They have over 3.5 million polygon geometries for buildings in Ireland. This data is not for public consumption, so please do not use this data beyond this tutorial. ",
+    "\n",
+    "Upload this data into stardog following the previous procedure. Now use yasgui to query the data. Try the previous geospatial queries over this new data set, in particular the nearby function.",
+    "Finally, as a challenge, see if you can edit an IFC models Longitude and Latitude to something close to the geospatial data, then convert the IFC geometry to WKT using the given method. How would you go about aligning an IFC geometry with geospatial data provided in the same form as the data provided by OSi?",
+   ]
+  },
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
