--- a/Notebooks/03-00-geo-bim-tutorial.ipynb
+++ b/Notebooks/03-00-geo-bim-tutorial.ipynb
@@ -5,7 +5,7 @@
 			"source": [
 				"# SETUP FOR SUPPORTING QUERIES OF IFCOWL GEOMETRIES CONVERTED INTO GEOSPARQL\n",
 				"\n",
-				"Lecturer: **Kris McGlinn**,[www.krismcglinn.com](https://www.krismcglinn.com), [Research Gate](https://www.researchgate.net/profile/Dr_Kris_Mcglinn)  \n",
+				"Lecturer: **Kris McGlinn**,[www.krismcglinn.com](http://www.krismcglinn.com), [Research Gate](https://www.researchgate.net/profile/Dr_Kris_Mcglinn)  \n",
 				"\n",
 				"Edited by Kris McGlinn, Joseph Donovan, [ADAPT Centre](https://www.adaptcentre.ie), [Trinity College Dublin](https://www.tcd.ie), Ireland\n",
 				"\n",
