--- a/Notebooks/03-00-geo-bim-tutorial.ipynb
+++ b/Notebooks/03-00-geo-bim-tutorial.ipynb
@@ -7,7 +7,7 @@
 				"\n",
 				"Lecturer: **Kris McGlinn**,[www.krismcglinn.com](http://www.krismcglinn.com)  \n",
 				"\n",
-				"Edited by Kris McGlinn, Joseph Donovan, [ADAPT Centre](https://www.adaptcentre.ie), [Trinity College Dublin](https://www.tcd.ie), Ireland\n",
+				"Edited by Kris McGlinn, [ADAPT Centre](https://www.adaptcentre.ie), [Trinity College Dublin](https://www.tcd.ie), Ireland\n",
 				"\n",
 				"## Introduction\n",
 				"\n",
