--- a/Notebooks/03-00-geo-bim-tutorial.ipynb
+++ b/Notebooks/03-00-geo-bim-tutorial.ipynb
@@ -205,11 +205,11 @@
 			"source": [
 				"## STEP 5 WORKING WITH GEOSPATIAL DATA\n",
 				"\n",
-				"Now let’s examine the use of some geospatial data. Go to (url will be provided on the day) and download the RDF file. This file is a subset of the Ordnance Survey Irelands geospatial data. They have over 3.5 million polygon geometries for buildings in Ireland. This data is not for public consumption, so please do not use this data beyond this tutorial. ",
+				"Now let’s examine the use of some geospatial data. Go to (url will be provided on the day) and download the RDF file. This file is a subset of the Ordnance Survey Irelands geospatial data. They have over 3.5 million polygon geometries for buildings in Ireland. This data is not for public consumption, so please do not use this data beyond this tutorial.   \n",
 				"\n",
-				"Upload this data into stardog following the previous procedure. Now use yasgui to query the data. Try the previous geospatial queries over this new data set, in particular the nearby function.",
+				"Upload this data into stardog following the previous procedure. Now use yasgui to query the data. Try the previous geospatial queries over this new data set, in particular the nearby function. \n",
 				"\n",
-				"Finally, as a challenge, see if you can edit an IFC models Longitude and Latitude to something close to the geospatial data, then convert the IFC geometry to WKT using the given method. How would you go about aligning an IFC geometry with geospatial data provided in the same form as the data provided by OSi?"
+				"Finally, as a challenge, see if you can edit an IFC models Longitude and Latitude to something close to the geospatial data, then convert the IFC geometry to WKT using the given method. How would you go about aligning an IFC geometry with geospatial data provided in the same form as the data provided by OSi?  \n"
 			]
 		}
 	],
