--- a/Notebooks/03-00-geo-bim-tutorial.ipynb
+++ b/Notebooks/03-00-geo-bim-tutorial.ipynb
@@ -127,7 +127,7 @@
 			"cell_type": "markdown",
 			"metadata": {},
 			"source": [
-				"<img src=\"../figures/StartdogStartup.png\" width=\"600\" />\n",
+				"<img src=\"https://www.scss.tcd.ie/~mcglink/workshop/ldac2019/figures/img1.png\" width=\"600\" />\n",
 				"\n",
 				"You will need to create a database with geospatial enabled. This is done using the following command in your command line (open a second command window if required). Here we call the db ifcgeo and we also load in our text data set “test_file_ ifc_geo.ttl”\n",
 				"\n",
@@ -137,9 +137,9 @@
 				"\n",
 				"You can check to make sure the db you created is there by clicking on “ifcgeo” (see below). Once you have clicked, check to see “spatial index” is set to “on”. \n",
 				"\n",
-				"<img src=\"../figures/StardogAdmin.png\" width=\"600\" />\n",
+				"<img src=\"https://www.scss.tcd.ie/~mcglink/workshop/ldac2019/figures/img2.png\" width=\"600\" />\n",
 				"\n",
-				"<img src=\"../figures/StardogSetup.png\" width=\"600\" />\n",
+				"<img src=\"https://www.scss.tcd.ie/~mcglink/workshop/ldac2019/figures/img3.png\" width=\"600\" />\n",
 				"\n",
 				"With the triples loaded, you can now start playing with SPARQL queries. In the next tutorial, we look at this in more detail and you will create some GeoSPARQL queries over your geometry."
 			]
@@ -175,7 +175,7 @@
 				"\n",
 				"Upon opening yasgui in your browser, you will need to specify the endpoint for Stardog, which is [http://localhost:5820/ifcgeo/query](http://localhost:5820/ifcgeo/query)\n",
 				"\n",
-				"<img src=\"../figures/StardogYasgui.png\" width=\"600\" />"
+				"<img src=\"https://www.scss.tcd.ie/~mcglink/workshop/ldac2019/figures/img4.png\" width=\"600\" />"
 			]
 		},
 		{
