Addition of geoSPARQL tutorial by @kmcglinn

--- a/Notebooks/Index.ipynb
+++ b/Notebooks/Index.ipynb
@@ -33,6 +33,7 @@
     "\n",
     "## Chapter 3 - Lecture Notes and Tutorials\n",
     "\n",
+	"* [03-00 Geo BIM Tutorial](03-00-geo-bim-tutorial.ipynb)  ",
     "* [03-01 Introduction to Node-Red](03-01-Node-Red-Tutorial.ipynb)  "
    ]
   },
