testing Jena RDF/XML

--- a/Java Notebooks/HelloWorld.ipynb
+++ b/Java Notebooks/HelloWorld.ipynb
@@ -2,9 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello stdout!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Hello stderr!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Hello Out!"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "System.out.println(\"Hello stdout!\");\n",
     "System.err.println(\"Hello stderr!\");\n",
@@ -21,11 +46,11 @@
   },
   "language_info": {
    "codemirror_mode": "java",
-   "file_extension": ".java",
+   "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "9+181"
+   "version": "12.0.1+12"
   }
  },
  "nbformat": 4,
