minor setup corrections

--- a/Java Notebooks/BOT_reasoning.ipynb
+++ b/Java Notebooks/BOT_reasoning.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,8 +21,15 @@
     "    <artifactId>apache-jena-libs</artifactId>\n",
     "    <type>pom</type>\n",
     "    <version>3.11.0</version>\n",
-    "</dependency>\n",
-    "\n",
+    "</dependency>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%loadFromPOM\n",
     "<dependencies>\n",
     "  <dependency>\n",
@@ -112,19 +119,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/***************** facts BEFORE inference ****************/\n",
-      "(<https://ldac.org/house#BuildingA> <https://w3id.org/bot#hasStorey> <https://ldac.org/house#Storey01>)\n",
-      "(<https://ldac.org/house#BuildingA> <https://w3id.org/bot#hasStorey> <https://ldac.org/house#Storey00>)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "// load a simple instance file from the example az\n",
     "// https://w3c-lbd-cg.github.io/bot/?tab=0#two-storey-building\n",
@@ -152,39 +149,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "/***************** facts AFTER inference ****************/\n",
-      "(<https://ldac.org/house#BuildingA> <https://w3id.org/bot#hasStorey> <https://ldac.org/house#Storey01>)\n",
-      "(<https://ldac.org/house#BuildingA> <https://w3id.org/bot#hasStorey> <https://ldac.org/house#Storey00>)\n",
-      "(<https://ldac.org/house#BuildingA> rdf:type owl:Thing)\n",
-      "(<https://ldac.org/house#BuildingA> rdf:type <https://w3id.org/bot#Building>)\n",
-      "(<https://ldac.org/house#BuildingA> <https://w3id.org/bot#containsZone> <https://ldac.org/house#Storey01>)\n",
-      "(<https://ldac.org/house#BuildingA> <https://w3id.org/bot#containsZone> <https://ldac.org/house#Storey00>)\n",
-      "(<https://ldac.org/house#BuildingA> rdf:type <https://w3id.org/bot#Zone>)\n",
-      "(<https://ldac.org/house#BuildingA> rdf:type rdfs:Resource)\n",
-      "(<https://ldac.org/house#BuildingA> <https://w3id.org/bot#containsZone> <https://ldac.org/house#SpaceD>)\n",
-      "(<https://ldac.org/house#BuildingA> <https://w3id.org/bot#containsZone> <https://ldac.org/house#SpaceC>)\n",
-      "(<https://ldac.org/house#BuildingA> <https://w3id.org/bot#containsZone> <https://ldac.org/house#SpaceB>)\n",
-      "(<https://ldac.org/house#BuildingA> <https://w3id.org/bot#containsZone> <https://ldac.org/house#SpaceA>)\n",
-      "(<https://ldac.org/house#BuildingA> owl:sameAs <https://ldac.org/house#BuildingA>)\n",
-      "(<https://ldac.org/house#BuildingA> owl:differentFrom <https://ldac.org/house#SpaceD>)\n",
-      "(<https://ldac.org/house#BuildingA> owl:differentFrom <https://ldac.org/house#SpaceC>)\n",
-      "(<https://ldac.org/house#BuildingA> owl:differentFrom <https://ldac.org/house#SpaceB>)\n",
-      "(<https://ldac.org/house#BuildingA> owl:differentFrom <https://ldac.org/house#SpaceA>)\n",
-      "(<https://ldac.org/house#BuildingA> owl:differentFrom <https://ldac.org/house#SiteA>)\n",
-      "(<https://ldac.org/house#BuildingA> owl:differentFrom <https://ldac.org/house#Storey01>)\n",
-      "(<https://ldac.org/house#BuildingA> owl:differentFrom <https://ldac.org/house#Storey00>)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "// import the BOT Ontology from the source via HTTP\n",
     "/****** the T-BOX *************/\n",
@@ -247,35 +214,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(<https://ldac.org/house#Storey00> <https://ldac.org/connection#isConnectedTo> <https://ldac.org/house#SpaceA>)\n",
-      "(<https://ldac.org/house#Storey00> <https://w3id.org/bot#hasSpace> <https://ldac.org/house#SpaceB>)\n",
-      "(<https://ldac.org/house#Storey00> <https://w3id.org/bot#hasSpace> <https://ldac.org/house#SpaceA>)\n",
-      "(<https://ldac.org/house#Storey00> rdf:type <https://w3id.org/bot#Storey>)\n",
-      "(<https://ldac.org/house#Storey00> rdf:type owl:Thing)\n",
-      "(<https://ldac.org/house#Storey00> <https://w3id.org/bot#containsZone> <https://ldac.org/house#SpaceB>)\n",
-      "(<https://ldac.org/house#Storey00> <https://w3id.org/bot#containsZone> <https://ldac.org/house#SpaceA>)\n",
-      "(<https://ldac.org/house#Storey00> rdf:type <https://w3id.org/bot#Zone>)\n",
-      "(<https://ldac.org/house#Storey00> <https://ldac.org/connection#isConnectedTo> <https://ldac.org/house#SpaceB>)\n",
-      "(<https://ldac.org/house#Storey00> <https://ldac.org/connection#isConnectedTo> <https://ldac.org/house#SpaceC>)\n",
-      "(<https://ldac.org/house#Storey00> <https://ldac.org/connection#isConnectedTo> <https://ldac.org/house#Storey00>)\n",
-      "(<https://ldac.org/house#Storey00> rdf:type rdfs:Resource)\n",
-      "(<https://ldac.org/house#Storey00> owl:sameAs <https://ldac.org/house#Storey00>)\n",
-      "(<https://ldac.org/house#Storey00> owl:differentFrom <https://ldac.org/house#BuildingA>)\n",
-      "(<https://ldac.org/house#Storey00> owl:differentFrom <https://ldac.org/house#SiteA>)\n",
-      "(<https://ldac.org/house#Storey00> owl:differentFrom <https://ldac.org/house#SpaceD>)\n",
-      "(<https://ldac.org/house#Storey00> owl:differentFrom <https://ldac.org/house#SpaceC>)\n",
-      "(<https://ldac.org/house#Storey00> owl:differentFrom <https://ldac.org/house#SpaceB>)\n",
-      "(<https://ldac.org/house#Storey00> owl:differentFrom <https://ldac.org/house#SpaceA>)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Model conn = FileManager.get().loadModel(\"../data/conn.ttl\");\n",
     "bot.add(conn);\n",
